--- a/Mediapipe_Optional_Masking/Masking_Mediapiping.ipynb
+++ b/Mediapipe_Optional_Masking/Masking_Mediapiping.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c994ac16",
    "metadata": {},
    "outputs": [
@@ -214,18 +214,125 @@
      "text": [
       "We will now process video:\n",
       "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_10_Gesture_42.40_43.96.mp4\n",
-      "This is video number0of40videos in total\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "type object 'SolutionOutputs' has no attribute 'world_landmarks'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 73\u001b[0m\n\u001b[0;32m     65\u001b[0m mp_drawing\u001b[38;5;241m.\u001b[39mdraw_landmarks(\n\u001b[0;32m     66\u001b[0m         original_image,\n\u001b[0;32m     67\u001b[0m         results\u001b[38;5;241m.\u001b[39mpose_landmarks,\n\u001b[0;32m     68\u001b[0m         mp_holistic\u001b[38;5;241m.\u001b[39mPOSE_CONNECTIONS,\n\u001b[0;32m     69\u001b[0m         landmark_drawing_spec\u001b[38;5;241m=\u001b[39mmp_drawing_styles\u001b[38;5;241m.\u001b[39m\n\u001b[0;32m     70\u001b[0m         get_default_pose_landmarks_style())\n\u001b[0;32m     71\u001b[0m \u001b[38;5;66;03m#######################now save everything to a time series\u001b[39;00m\n\u001b[0;32m     72\u001b[0m     \u001b[38;5;66;03m#make a variable list with x, y, z, info where data is appended to\u001b[39;00m\n\u001b[1;32m---> 73\u001b[0m samplebody \u001b[38;5;241m=\u001b[39m listpostions(\u001b[43mresults\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mworld_landmarks\u001b[49m)\n\u001b[0;32m     74\u001b[0m samplehands \u001b[38;5;241m=\u001b[39m listpostions([results\u001b[38;5;241m.\u001b[39mleft_hand_landmarks, results\u001b[38;5;241m.\u001b[39mright_hand_landmarks])\n\u001b[0;32m     75\u001b[0m sampleface \u001b[38;5;241m=\u001b[39m listpostions(results\u001b[38;5;241m.\u001b[39mface_landmarks)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'SolutionOutputs' has no attribute 'world_landmarks'"
+      "This is video number0of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_11_Gesture_48.64_49.04.mp4\n",
+      "This is video number1of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_12_Gesture_49.52_52.12.mp4\n",
+      "This is video number2of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_13_Move_54.40_55.00.mp4\n",
+      "This is video number3of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_14_Gesture_55.76_56.12.mp4\n",
+      "This is video number4of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_15_Gesture_58.96_61.36.mp4\n",
+      "This is video number5of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_16_Gesture_66.80_68.28.mp4\n",
+      "This is video number6of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_17_Gesture_70.40_71.44.mp4\n",
+      "This is video number7of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_18_Gesture_73.68_79.08.mp4\n",
+      "This is video number8of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_19_Gesture_79.84_81.12.mp4\n",
+      "This is video number9of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_1_Gesture_8.00_8.92.mp4\n",
+      "This is video number10of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_20_Gesture_82.92_83.68.mp4\n",
+      "This is video number11of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_21_Gesture_84.48_85.60.mp4\n",
+      "This is video number12of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_22_Gesture_91.40_91.80.mp4\n",
+      "This is video number13of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_23_Gesture_95.28_96.00.mp4\n",
+      "This is video number14of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_24_Gesture_99.72_101.32.mp4\n",
+      "This is video number15of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_25_Gesture_101.84_108.68.mp4\n",
+      "This is video number16of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_26_Gesture_111.28_112.24.mp4\n",
+      "This is video number17of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_27_Gesture_112.96_114.08.mp4\n",
+      "This is video number18of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_28_Gesture_115.00_121.64.mp4\n",
+      "This is video number19of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_29_Gesture_123.32_124.36.mp4\n",
+      "This is video number20of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_2_Gesture_11.84_12.48.mp4\n",
+      "This is video number21of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_30_Gesture_124.68_130.16.mp4\n",
+      "This is video number22of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_31_Gesture_130.80_131.16.mp4\n",
+      "This is video number23of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_32_Gesture_131.72_132.68.mp4\n",
+      "This is video number24of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_33_Move_137.20_137.60.mp4\n",
+      "This is video number25of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_34_Gesture_139.24_142.12.mp4\n",
+      "This is video number26of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_35_Gesture_142.52_145.76.mp4\n",
+      "This is video number27of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_36_Gesture_147.88_151.44.mp4\n",
+      "This is video number28of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_37_Gesture_152.20_153.56.mp4\n",
+      "This is video number29of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_38_Gesture_154.88_156.64.mp4\n",
+      "This is video number30of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_39_Gesture_157.08_160.32.mp4\n",
+      "This is video number31of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_3_Gesture_12.96_14.80.mp4\n",
+      "This is video number32of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_40_Gesture_161.52_164.04.mp4\n",
+      "This is video number33of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_4_Gesture_18.84_20.40.mp4\n",
+      "This is video number34of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_5_Gesture_30.88_31.28.mp4\n",
+      "This is video number35of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_6_Gesture_32.04_33.00.mp4\n",
+      "This is video number36of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_7_Gesture_34.24_34.68.mp4\n",
+      "This is video number37of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_8_Gesture_39.24_40.52.mp4\n",
+      "This is video number38of40videos in total\n",
+      "We will now process video:\n",
+      "03. Senator Emer Currie - speech from 9 Jul 2020.mp4_segment_9_Gesture_40.96_41.76.mp4\n",
+      "This is video number39of40videos in total\n",
+      "Done with processing all folders; go look in your output folders!\n"
      ]
     }
    ],
@@ -371,7 +478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "envisionbeta",
+   "display_name": "envision",
    "language": "python",
    "name": "python3"
   },
