--- a/Step_2_Mediapipe_Optional_Masking/Masking_Mediapiping.ipynb
+++ b/Step_2_Mediapipe_Optional_Masking/Masking_Mediapiping.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c994ac16",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,8 @@
      "text": [
       "We will now process video:\n",
       "03_example.mp4\n",
-      "This is video number0of1videos in total\n"
+      "This is video number0of1videos in total\n",
+      "Done with processing all folders; go look in your output folders!\n"
      ]
     }
    ],
